# markappoly

./: DISTRIBUTION.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  DiffView.tsx  EditorPane.tsx  FindBar.tsx  FrontmatterBar.tsx  GraphView.tsx  Menu.tsx  Mermaid.tsx  PresentView.tsx  PropertiesPanel.tsx  QuickSwitcher.tsx  Settings.tsx  Sidebar.tsx  TabBar.tsx  editorFeatures.ts  editorTheme.ts  export.ts  folderTree.test.ts  folderTree.ts  frontmatter.test.ts  frontmatter.ts  fuzzy.test.ts  fuzzy.ts  headings.test.ts  headings.ts  htmlToMarkdown.ts  icons.tsx  markdown.tsx  paths.test.ts  paths.ts  prefs.ts  remarkObsidian.test.ts  remarkObsidian.ts  session.test.ts  session.ts  tableTools.ts  types.ts  useDebouncedValue.ts  useLiveReload.ts  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
